# pandora

./: .gitignore  CMakeLists.txt  Kconfig  LICENSE  README.md  west.yml
.github/workflows/: build-samples.yml  esphome_firmware.yaml
LIB_1188E-1K2-V-T_R/1188E-1K2-V-T_R/: 1188E-1K2-V-T_R.epw  part_info.txt
LIB_1190301/1190301/: 1190301.epw  part_info.txt
app/: sample.yaml
app/boards/: beagleconnect_freedom.conf  beagleconnect_freedom.overlay  native_sim.overlay  nucleo_f429zi.overlay  zeus.overlay
common/: Pandora.kicad_sym  pandora-conector.kicad_sch
common/Pandora.pretty/: A-1JB.kicad_mod  IPC1352.kicad_mod  Pandora Connector 8.kicad_mod  Pandora Connector 9.kicad_mod  RFECA3216060A1T.kicad_mod  Skyworks_SKY1337-373LF.kicad_mod  TE-2-796683-8.kicad_mod  TE-2834082-5.kicad_mod  Tag-Connect-10.kicad_mod  Texas_RGZ0048A_VQFN-48-1EP_7x7mm_P0.5mm_EP5.15x5.15mm_ThermalVias.kicad_mod  Zeus Connector.kicad_mod  Zeus Connector_1.kicad_mod  Zeus Connector_2.kicad_mod
drivers/: CMakeLists.txt  Kconfig
drivers/light/: CMakeLists.txt  Kconfig  light_gpio.c  light_rgbct.c  shell.c
drivers/sensor/: CMakeLists.txt  Kconfig  sensor_simu.c
dts/bindings/: discovery.yaml  vendor-prefixes.txt
mcu-cc1352p7/: cc1352p7-mcu.kicad_sch  cc1352p7-wireless-muc.kicad_sch  pandora-cc1352  pandora-mcu-cc1352p7.kicad_pcb  pandora-mcu-cc1352p7.kicad_pro  pandora-mcu-cc1352p7.kicad_sch  sym-lib-table
zephyr/: module.yml
zeus-power-switch/: power-switch.kicad_sch  zeus-power-switch.kicad_pcb  zeus-power-switch.kicad_pro  zeus-power-switch.kicad_sch  zeus-user-intf.kicad_sch
(+256 files in other folders)
